# caju-actual-budget-importer

./: .env.example  .gitignore  Cargo.toml  README.md
src/: caju.rs  main.rs  ofx.rs
src/flash/: auth.rs  mod.rs  statement.rs
